--- a/4/4.md
+++ b/4/4.md
@@ -464,4 +464,297 @@ We can do, let's say, add another argument here, `sources ?`, so niv, this is th
 ```
 
 So this imports the `sources.nix` file which also then imports all the pinned sources from the `sources.json` file so 
-in here we can use `nixpkgs ? sources.nixpkgs,` instead, yeah let's try out 32.51
+in here we can use `nixpkgs ? sources.nixpkgs,` instead, yeah let's try this out, so `sources.nixpkgs`, this is the source
+name here, so any of them can be used. Let's try it out: `nix-build -A myHello`. It works, it seems like it used a 
+different version here, but niv is fairly cool, there's the cli, there's a lot of things to change. So we can say here,
+`nix show` which shows the source, we can modify without updating, update dependencies, we can add dependencies, we 
+can say `niv add`, let's say `niv add flake-compat` (error), or `niv add NixOS/flake-compat` (error), ok that's either
+not a thing or, I don't know, my personal repository here, `infinisil/system`, so by default it uses the github syntax,
+the github owner, and the github repository, so it's fairly easy to add most dependencies, and now we also have this
+tracked in the `cat nix/sources.json` file, so let me remove this again, `niv drop system`, but we can also update,
+so let's say we update nixpkgs just to use, which branch, we want to use the `nixos-21.05` branch,
+`niv update nixpkgs --branch=nixos-21.05`, and build hello again, `nix-build -A myHello`, oh I think it might fetch
+it twice here, anyways I think this is the same one as we have in flake now, yeah (compares the hash). So yeah niv 
+can be used, niv only relies on stable nix features, it doesn't use flakes so this can be used to do automatic
+source updates. I do need to point out though that `vim flake.nix`, they do the source tracking recursively, so what
+would be a good example..
+
+Yuriy Taraday: Home manager?
+
+Silvan: Home-manager, yeah that's a good one. Let me do home-manager here:
+
+```nix
+{
+
+  inputs.nixpkgs.url = "github:NixOS/nixpkgs/nixos-21.05";
+  inputs.home-manager.url = "github:nix-community/home-manager";
+
+  outputs = { self, nixpkgs, ... }: {
+    # flake-utils
+    packages.x86_64-linux.myHello = (import nixpkgs { system = "x86_64-linux"; }).hello;
+    packages.x86_64-darwin.myHello = (import nixpkgs { system = "x86_64-darwin"; }).hello;
+  };
+
+}
+```
+
+Oh yeah, the `...` here. Now let's do a `nix flake update`, and so as you can see here it added not just home-manager but
+also the flakes it depends on individually (added input `home-manager`, `home-manager/nixpkgs`, `home-manager/utils`), so
+in the `vim flake.lock` file we now have home-manager, we have one nixpkgs, another nixpkgs, one for home-manager, one for nixpkgs, 
+and flake-utils as well. And so this is convenient, flakes does provide that, niv doesn't have that, so let's say we add
+`niv add nix-community/home-manager` to niv, and now, well yeah, that's also a thing with flakes, you can just do,
+`nix flake show github:nix-community/home-manager`, so flake does have this standard structure that traditionally
+nix never had, so in here we can see ok, this flake provides a default package, it provides NixOS module, it provides
+packages for different architectures, templates as well and so this is nice and convenient. If we want to do the same
+for traditional nix we need to really read the description of the project and figure out what convention it uses, so for
+flakes let's say let's do like:
+
+```nix
+> nix repl
+nix-repl> s = import ./nix/sources.nix
+s.home-manager
+```
+
+Let me just get the `outPath` here, let's go in here, OK, home-manager provides a flake here but we don't want to rely
+on this right now, so it's the `vim default.nix`, and now you can go in here, and you can say, it has this structure we
+also had before, it doesn't allow us to override the system but we can just override the entire packages here, and so
+let's say, let's say we want to build the docs:
+
+```nix
+{ pkgs ? import <nixpkgs> { } }:
+
+rec {
+  docs = with import ./docs { inherit pkgs; }; {
+    html = manual.html;
+    manPages = manPages;
+    json = options.json;
+    jsonModuleMaintainers = jsonModuleMaintainers; # Unstable, mainly for CI
+  };
+
+  home-manager = pkgs.callPackage ./home-manager { path = toString ./.; };
+
+  install = 
+    pkgs.callPackage ./home-manager/install.nix { inherit home-manager; };
+
+  nixos = import ./nixos;
+
+  path = ./.;
+}
+```
+
+And so to do this, let's go back to `cd nix-hour/flakes` here, `vim default.nix`:
+
+```nix
+{ system ? builtins.currentSystem,
+  sources ? import nix/sources.nix,
+  nixpkgs ? sources.nixpkgs,
+  pkgs ? import nixpkgs {
+    overlays = [];
+    config = [];
+    inherit system;
+  },
+}: {
+  myHello = pkgs.hello;
+}
+```
+
+So we have home-manager in our sources, let's now use, `homeManagerDocs = sources.home-manager`, now we need to import
+this, `homeManagerDocs = import sources.home-manager`, because this should work, home-manager has a file path which
+is used by default, `homeManagerDocs = import sources.home-manager.outPath` and nix uses the `default.nix` file by 
+default. It is however a function so we need to provide an argument here (deletes `outPath` and writes `{ }`) and here
+we see that it takes a `pkgs = ` argument, and here we can provide the packages we had in our environment here,
+`pkgs = pkgs;`:
+
+```nix
+{ system ? builtins.currentSystem,
+  sources ? import nix/sources.nix,
+  nixpkgs ? sources.nixpkgs,
+  pkgs ? import nixpkgs {
+    overlays = [];
+    config = [];
+    inherit system;
+  },
+}: {
+  homeManagerDocs = import sources.home-manager {
+    pkgs = pkgs;
+  };
+
+  myHello = pkgs.hello;
+}
+```
+
+All right, now this is just the main attribute set, we want to get the docs, this is `.doc`, well let's try it out:
+
+```nix
+...
+  homeManagerDocs = (import sources.home-manager {
+    pkgs = pkgs;
+  }).doc;
+```
+
+So let's try `nix-build -A homeManagerDocs` (error), that wasn't it, (changes `.docs` to `.manual`), nope, it was, oh
+`.docs`, and now we build that, and it fails (`error! anonymous function at..`), oh OK, so this is interesting now,
+I think what happened here is that the packages version we have pinned here which is actually fairly old one, use the
+nixos 21.05, year ago, or one and a half, and so I don't think home-manager works with that older version in the 
+flake world. Let's go to `vim flake.nix` and do the same, let's do like linux, let's do home-manager, so we seen 
+earlier, (looks at `nix flake show github:nix-community/home-manager`)
+
+```nix
+---x86_64-linux
+    |--docs-html: package 'html-manual'
+```
+
+Let's try that:
+
+```nix
+{
+
+  inputs.nixpkgs.url = "github:NixOS/nixpkgs/nixos-21.05";
+  inputs.home-manager.url = "github:nix-community/home-manager";
+
+  outputs = { self, nixpkgs, ... }: {
+    # flake-utils
+    packages.x86_64-linux.myHello = (import nixpkgs { system = "x86_64-linux"; }).hello;
+    packages.x86_64-darwin.myHello = (import nixpkgs { system = "x86_64-darwin"; }).hello;
+
+    packages.x86_64-linux.homeManagerDocs = home-manager.packages.x86_64-linux.docs-html;
+  };
+
+}
+```
+
+Now I should be able to do `nix build .\#homeManagerDocs` and if we are lucky, actually now, it should just work,
+yeah it worked, now we can look at the docs, but yes what happened here is that, so flake did track the recursive
+dependencies of home-manager. Home manager itself has some pinned nix packages that it uses and that it knows that
+my docs build with that nix packages and so it just used that version by default. While in flake you can override this
+and like you can say I think, Yuri is it like this? Yuri: yeah yeah, inputs dot nixpkgs.
+
+```nix
+inputs.home-manager.inputs.nixpkgs.follows = "nixpkgs";
+```
+
+Let's try this. So there is this follows mechanism in flakes where you can say that `home-manager` is nixpkgs input, 
+should use the nixpkgs we have pinned here. Let's try this, `nix build .\#homeManagerDocs`, and so yeah now we get the
+same error as before so in this case we wouldn't want to do this but this would be the equivalent of what we did
+in the traditional nix one, so what do we do here (now looks at the other nix traditional `default.nix` file), 
+we can update the `sources ? import nix/sources.nix,` to be like up to date or use the latest one that home-manager uses
+which we also have to figure out somehow. We could also use a separate nixpkgs, so we go into home-manager here and 
+look at `flake.lock` and say oh it has a nixpkgs that comes from this revision, let's copy this and do some kind of hacky
+`niv add NixOS/nixpkgs --rev`, can I provide arguments here? Oh yeah, we have the package already existing. I do think there
+should be a way to rename it. (Yuri comments about the name arg)
+
+```nix
+> niv add NixOS/nixpkgs --rev 3ba..62 --name nixpkgs-home-manager`
+Adding package nixpkgs-home-manager
+```
+
+Let's call it that. And using it, so instead of using `pkgs = pkgs;` we have here let's use `pkgs = sources.nixpkgs-home-manager;`
+But now this is nixpkgs in the packages so we could import it `pkgs = import sources.nixpkgs-home-manager { };`. Now we 
+could do the same here again, let's do it for purity. We could also probably set like nixpkgs argument, but let's
+just duplicated it for now:
+
+```nix
+{ system ? builtins.currentSystem,
+  sources ? import nix/sources.nix,
+  nixpkgs ? sources.nixpkgs,
+  pkgs ? import nixpkgs {
+    overlays = [];
+    config = [];
+    inherit system;
+  },
+}: {
+  homeManagerDocs = (import sources.home-manager {
+    pkgs = import sources.nixpkgs-home-manager {
+      overlays = [];
+      config = [];
+      inherit system;
+  }).docs;
+
+  myHello = pkgs.hello;
+}
+```
+
+Let's try it again, `nix-build -A homeManagerDocs`, probably fetching nixpkgs right now, all right, that did work though, `t result/`,
+so yeah, if you have I guess packages like home-manager which have their own dependencies which they want to have pinned for
+themselves, flakes does really add some value over niv, but if you want to, if you are ok with that, if you don't do
+many these recursive dependencies it might be ok to just do something like this in case you need it (shows `default.nix`
+with `pkgs = import sources.nixpkgs-home-manager` but also this, it's kind of a two edged sword because in the flake world
+a lot of projects do pin their own nix packages and this since has been termed as cat of a thousand nixpkgs instances.
+Let's see, yeah, thousand instances of nixpkgs, there is a good blog post I'm gonna link it in the chat here for now by
+Jonas or zimbatm, he talks about this a bit, about how it really turned out that a lot of people pin their nixpkgs and this
+gets out of hand quickly because, so in this case we only have home-manager which has it's own pinned nixpkgs
+but if we have some dependency that uses home-manager or some dependent that uses home-manager as its dependency and they don't,
+it also has it's own nixpkgs then that, there's two nixpkgs in that already, now we had our own here as well, and this not 
+only leads to a lot of disk usage because you have so many nix packages, it also leads to problems with kind of composing
+things, because every nixpkgs has its own, potentially has it's own set of entire versions, version trees and apis and 
+stuff like that, and so generally a lot of people try to use follows as much as possible. In this case we can't do this
+because this version (`21.05`) is too old so we have to update it to a later version, let's try this, this might actually work,
+
+```nix
+{
+
+  inputs.nixpkgs.url = "github:NixOS/nixpkgs";
+  inputs.home-manager.url = "github:nix-community/home-manager";
+...
+```
+
+`nix build .\#homeManagerDocs`, yes, let's see, seems to work.. 
+
+Yuri: btw, I said my real experience with this like, we have a project, I think it's in public in Cardano area of the internet
+where we have like hundred nix packages, some of them are different, some of them are the same, it's usually really
+slow and sometimes causes problems, yes. 
+
+Silvan: Yeah, yeah, and right, you'll often see in alot of these follows in the flake world, so also recursive, so we might have
+like let's say we have `someProject.inputs.home-manager` and trees like this, and this is a very manual process to add
+this, yeah. So it's a two edged sword yeah. Yeah we have like seven more minutes. Do we have any questions about this or also
+something else, I'm open to anything.
+
+Nat (the first questioner): So actually I have a lot of questions, I guess I'll wait until next week to add any more, I 
+don't want to pick up the whole time but when it comes to working with all the various whatever to nix operations
+I know that there is you know dream2nix which is also experimental, I've used node2nix and a couple other ones, but it just
+seems to me like I'm not sure is this even a good idea or what would you recommend for any kind of, let's just take a node
+project as an example.
+
+Silvan: Yeah, yeah, um so nix itself doesn't know how to build a lot of these frameworks from like all these languages. Someone
+needs to implement them in nix, and someone needs to make nix build work. And nix packages can't do that in a lot of cases,
+because of IFD restrictions, import from derivation restrictions, um there are some, like 2nix tools in nixpkgs though,
+but they can't be used in nixpkgs itself anyways, so it's really kind of a who comes up with the best way to build projects
+in this language within Nix and there is often multiple ways of doing that so specifically in the javascript world
+you have your node2nix, I think there is two version of node2nix, yarn2nix, there's just recently actually a build npm package
+has been merged in nixpkgs and also just like yesterday some what was it called jays2nix or something like that has been
+announced, and I also know someone else is working on something too, it's really quite, there is a lot of different
+ways of doing it and there's no like clear general recommendation I can give, well, I guess I can, and it is to look
+at these projects individually, see whether they're actively maintained, see how well they work, whether they have a lot of
+issues, try them out, see do they have test suites, are they documented, did they improve on past tools, things like that,
+
+Yuri: and also, I'm sorry, I would also mention that there is a different approach like if you are able to influence the
+software itself that you're packaging then you can actually introduce for example for in Javascript world
+there is this yarn plugin nixify which actually generate nix expression that you can then use to package the software
+that would basically be updated automatically when you use yarn, so essentially it is quite, basically solve this problem from
+the other side instead of reading in lock file and generating nix expression it generates nix expression and stores it in
+the same basically repository as lock file in the software itself so it's also quite like useful to know.
+
+Silvan: Nice, I didn't know about this but yeah, I guess we'd also have to take a look and kind of evaluate it how well
+it works and right, if you had just your own project that you need to build then this might be a better way, right 
+different requirements have different best solutions and dream2nix is interesting kind of trying to generalize 
+these tools but then it's also experimental and being worked on um, uh also sometimes so and like Javascript and node is fairly 
+popular, uh the more popular something is the higher the chances that someone from the nix world has already taken the time to
+make something nice work but if it's not popular then chances is nobody bothered to do something like that just yet and that's
+not just a black and white thing, there's a spectrum because you might have something that's half popular and then
+you have kind of a solution that works in like half good, half's good as something twice as popular for example. It 
+also depends on the people that do take a look at that for example in the Haskell world, haskellers are kind of
+very pure evaluation focused, purists in many ways, kind of trying to find the best solutions and so on, and so their
+tools generally work fairly well I'd say, there's only really two ways there, there's cabal2nix, and haskell.nix, they
+have different trade-offs, they both work fairly well, so yeah, it depends in many ways, just look at the tools, try
+to talk to people what their current recommendation is, like on matrix, on github issues and so on.
+
+So cabal2nix for example comes from nixpkgs, haskell.nix is a third party tool and so generally if you want more stability and speed
+generally the nixpkgs ones are preferred but others might be more, third party tools are often more sophisticated
+but then also not as much tested, and maybe a bit slower because they don't have the efficency requirements of nixpkgs,
+so yeah that's another general indication, but it's not a given, it all depends really again.
+
+Yeah, we're just, we're out of time, does that answer the question.
+
+Nat: Yeah, very helpful thank you.
+
+Silvan: So yeah, I'll stop the recording, thanks for joining.
