informal intro - floats

--- a/0/0.md
+++ b/0/0.md
@@ -90,4 +90,38 @@ Silvan: I don't think it should be those, it should be different, I can come to 
 that is really conflict because if we syntacticly desugar this, I guess it does make sense, you have one foo null,
 and one for the attribute set, all right, so I think it was just like an error in the error message but yeah it's 
 conflict, you can only define an attribute once and so that is sometimes a bit tricky to see, sometimes you have 
-like a big nix file..3.58
+like a big nix file and you do like `foo.bar` somewhere and then at a later time something else with `foo =`, but
+yeah, let's continue on.
+
+We can, some other values, integers, we also can do operations with integers like addition, `int = 10 + 10;`,
+division, `int = 10 + 2 / 3`, subtraction, `int = 10 + 2 / 3 - 10;`. Integer division (`/`), is like, it doesn't use
+floats, this (`2 / 3`) would get zero here. And here we are coming into lazy evaluation for the first time:
+
+```nix
+# Attribute set
+{
+    foo = null;
+    "foo.bar" = null;
+
+    fooz.bar = null;
+
+    int = 10 + 2 / 3 - 10;
+}
+```
+
+```nix
+:!nix-instantiate --eval default.nix
+{ foo = null; "foo.bar" = null; fooz = <CODE>; int = <CODE>; }
+```
+
+So if we just do the `nix-instantiate --eval` it shows like a `<CODE>` here which means that it hasn't evaluated this
+fully. This is a bit of a detail to how it is implemented but we can just add a `--strict` here `nix-instantiate --eval --strict`
+to force it to evaluate the whole thing, so then you can see the full values here:
+
+```nix
+:!nix-instantiate --eval --strict
+{ foo = null; "foo.bar" = null; fooz = { bar = null; }; int = 0; }
+```
+
+There is also floats, floats aren't often used but if you just add a, like a dot, `10.0`, like it converts the whole
+expression to a floating thing 5.25
