0th string interpolation

--- a/0/0.md
+++ b/0/0.md
@@ -123,5 +123,75 @@ to force it to evaluate the whole thing, so then you can see the full values her
 { foo = null; "foo.bar" = null; fooz = { bar = null; }; int = 0; }
 ```
 
-There is also floats, floats aren't often used but if you just add a, like a dot, `10.0`, like it converts the whole
-expression to a floating thing 5.25
+There is also floats, floats aren't often used, `floats = 10 + 2 / 3 - 10;` 
+but if you just add a, like a dot, `10.0`, like it converts the whole
+expression to a floating thing:
+
+```nix
+:!nix-instantiate --eval --strict
+{ floats = 0; foo = null; "foo.bar" = null; fooz = { bar = null; }; int = 0; }
+```
+
+Or, this part, `2.0`, I think you need here as well, like if there is at least one floating operation in the
+pipeline it turns it into a float:
+
+```nix
+:!nix-instantiate --eval --strict 
+{ floats = 0.666667; foo = null; "foo.bar" = null; fooz = { bar = null; }; int = 0; }
+```
+
+All right, there is a weird thing going on where it only prints the first six digits, `0.666667`, which is
+often times a bit inaqurate, but, something to fix in nix. Then some other, what do we have, we have
+floats, we have strings of course:
+
+```nix
+str = "foo bar";
+```
+
+Then strings can have interpolation. Certainly we need variables for this group so let's look at variables.
+So variables, we can do a let in statement to declare variables so we can say, let `someVariable = 10;` 
+in then the expression we want to evaluate with that variable in scope and we can say
+`someVariable + 1;`
+
+```nix
+variables = 
+  let someVariable = 10;
+  in someVariable + 1;
+```
+
+Let's evaluate this:
+
+```nix
+:!nix-instantiate --eval --strict
+{ floats = 0.666667; foo = null; "foo.bar" = null; fooz = { bar = null; }; int = 0; str = "foo bar";
+variables = 11; }
+```
+
+It works. Let's get down a bit here. So with variables we can then also use interpolation. We'd say let
+`someVariable = 10` or we need generally a, actually you don't need variables for interpolation I'm just
+realizing but let's use like this for now so we can have some string, or let's say `someName = Silvan`,
+in `"Hello, ${someName}";`:
+
+```nix
+interpolation = 
+  let someName = "Silvan";
+  in "Hello, ${someName}";
+```
+
+So this is how interpolation looks like in nix, the dollar, curly brackets, then in here, `{}`, you can
+also do, like this is a general nix expression, you can put anything here, you can also add like a plus,
+`{someName + }`, by the way plus is also for string concatenation, Silvan, let's add my last name here,
+`${someName + " Mosberger"}";`, so you can do this, the quotes do get a bit confusing here, but the
+string addition here, this is the same as just, moving Mosberger out here like this:
+
+```nix
+interpolation = 
+  let someName = "Silvan";
+  in "Hello, ${ someName + " Mosberger" }";
+  
+interpolation' = 
+  let someName = "Silvan";
+  in "Hello, ${ someName } Mosberger";
+```
+
+
