0th attribute selectors

--- a/0/0.md
+++ b/0/0.md
@@ -194,4 +194,69 @@ interpolation' =
   in "Hello, ${ someName } Mosberger";
 ```
 
+Of course, we can do then more complicated operations in here, that's any nix expression, so we can do like
+`let a = 10`, and then multiple variables, just add more of them, oh you need a semicolon, `let a = 10;`,
+`b = 20;`, then we can do something like, `${ a + b }`, now this will throw an error because string interpolation
+needs a string so if we were to evaluate this:
 
+```nix
+interpolation'' =
+  let 
+    a = 10;
+    b = 20;
+  in "Hello, ${a + b}";
+```
+
+```nix
+:!nix-instantiate --eval --strict
+error: cannot coerce an integer to a string
+...
+```
+
+Yeah, so this says cannot coerce an integer to a string, makes sense, we, there are builtin functions in nix
+which we can call from anywhere so one of these functions is `toString`, this converts pretty much anything
+to a string with some weird behaviour as well, `${ toString (a + b) }";`, parenthesis to make sure it doesn't 
+just convert the first one and then this should work, (returns `interpolation'' = "Hello, 30";`), right
+so `toString` useful builtin function. 
+
+There is some, like let's use `toStringExample = toString false;`, so this is some weird behaviour,
+to string of false, oh actually let's do, it's kind of hard to see the output here, (returns `toStringExample = "";`)
+but if we look at this, it turns into the empty string, and that comes from bash, like yeah, makes it simple to
+have that work for bash:
+
+```nix
+toStringExample = toString false;
+  -- returns toStringExample = "";
+toStringExample = toString true;
+  -- returns toStringExample = 1;
+```
+
+Empty string and one. Yeah, but it's, it works for integers, but it also works for other things but let's get
+to that later. Then what other basic things do we have. Right of course, we have attribute access or 
+`attributeSelectors = ` is maybe the right way, the right word, so let's say we define some attribute set here,
+let's say call it `foo = `, we can also use the dot syntax here, `foo.bar`, so `foo.bar.baz = 10;`, let's also do
+like `foo.bar.qux = 20;`, right, internally nix combines these into single ones so this should be valid, and so
+then we can also access the attributes of course so we can say access `in foo.bar.baz`, that's how you access
+these attributes again. So this just evaluates to 10.
+
+```nix
+attributeSelectors = 
+  let
+    foo.bar.baz = 10;
+    foo.bar.qux = 20;
+  in foo.bar.baz;
+```
+
+Let's actually do like this, that's kind of easier to see:
+
+```nix
+attributeSelectors = 
+  let
+    foo = {
+      bar.baz = 10;
+      bar.qux = 20;
+    };
+  in foo.bar.baz;
+```
+
+All right, so this works.
