--- a/0/0.md
+++ b/0/0.md
@@ -259,4 +259,101 @@ attributeSelectors =
   in foo.bar.baz;
 ```
 
-All right, so this works.
+All right, so this works. We can also do defaulting, `attributeSelectorsDefaulting`, where, let's say we access,
+we try to access an attribute that doesn't exist `foo.bar.baz.hello`, now if we try to evaluate this we get,
+`error: attribute 'hello' missing`, and so what we can do as a fallback is to you the `or` operator and we can say
+`or 30`. This means that if this attribute doesn't exist just return 30.
+
+```nix
+attributeSelectorsDefaulting =
+  let
+    foo = {
+      bar.baz = 10;
+      bar.qux = 20;
+    };
+  in foo.bar.baz.hello or 30;
+```
+
+If we do this, we get 30 here, `attributeSelectorsDefaulting = 30;`. That also works kind of nested, that
+almost works for anything actually so you could say `in foo.bar.hello.foo.bar or 30;`, that also works. Yes,
+all right. That is a common gotcha because the `or` isn't the binary `or` operator, those two exist.
+
+Let's do like `booleanOps = (true && false) || (true -> false);`, and this one we have implication `true -> false`,
+and the implication is really just if the left one is true then the right one needs to be true as well, but can be
+desugared to the, to this I believe `(!true || false);`, yeah it's sometimes useful. Are there any other? Oh there
+is `not` of course, a exclamation mark is not, `!`, `(true && ! false)`, all right so we have that, let's see 
+what would be next. We have string interpolation, we have this, variables.. functions I guess would be good next step.
+
+So you declare functions with a colon, `someFun = x:`, so declare the name of the function argument, then a colon, and then
+let's say, let's do return `x + 1;`, `x: x + 1;`, so that's like, in python it would be, do I know python? 
+`def someFun(x): return x + 1..` Matthew H.: Looks good, I don't know python. 
+
+```nix
+someFun = x: x + 1;
+```
+
+And then if you want to take multiple arguments you just kind of, well one of the ways you can do it is to just to do like this,
+`someFun' = x: y: x + y;`, kind of just take an argument, `x`, return a function `(y: x + y)` so this is just this, and then
+you use currying to apply this so let's do like:
+
+```nix
+someFun = 
+  let f = x: x + 1;
+  in f 1;
+
+someFun' =
+  let f = x: y: x + y;
+  in f 1 2;
+```
+
+So this, are you somewhat familiar with functional programming?
+
+Matthew H: Yeah.
+
+Silvan: From Haskell maybe?
+
+Matthew H: More from Scala, but I know a bit of Haskell.
+
+Silvan: Nice, so do you know about currying already
+
+Matthew H.: Yes, yeah.
+
+Silvan: Nice, nice.
+
+Yes, so this is one way to apply multiple arguments. Another is to, arguments can be, you can take an attribute set or
+destructure an attribute set as an argument so let's do `someAttrs = let f = {`, so the way you can do this is by kind
+of taking an attribute set here so let's say we have `{ x, y }: x + y; in` and so this is a function that takes an attribute 
+set with exactly the attributes `x` and `y` in it so this way we can do `x = 2;`, `y = 3;` and this is generally the
+recommended way to declare functions because you could name arguments this way:
+
+```nix
+someFunAttrs = 
+  let f = { x, y }: x + y;
+  in f {
+    x = 2;
+    y = 3;
+  };
+```
+
+And, also it's easy to add additional arguments later in a way that it doesn't brake all the code because if you were
+to add the next one here `let f = x: y: z: x + y; in f 1 2;` it would just brake this and return a function whereas if
+you add one here, `let f = { x, y, z }:` you get an error where `z` isn't provided.
+
+Now these function arguments have some other capabilities, something else is you can take an elipsis, it's what it's called.
+This allows you to take and ignore arbitrary other arguments, `f = {x, y, ...}:` so you could do this, how should we do this:
+
+```nix
+someFunAttrs' =
+  let
+    f = { x, y, ... }: x + y;
+  in f {
+    x = 2;
+    y = 3;
+    ignored = 4;
+  };
+```
+
+Matthew H: If you don't have the elipsis does that mean it will only accept an attribute set with exactly `x` and `y` or?
+
+Silvan: Exactly, yeah, if you don't provide one it will get an error, and if you provide something else it will also provide
+an error. 
