--- a/0/0.md
+++ b/0/0.md
@@ -357,3 +357,45 @@ Matthew H: If you don't have the elipsis does that mean it will only accept an a
 
 Silvan: Exactly, yeah, if you don't provide one it will get an error, and if you provide something else it will also provide
 an error. 
+
+Matthew: OK
+
+Silvan: Yep, right, you can also not provide one that's given here if you have a default here, this can be done with a 
+question mark, `f = { x ? , y, ... }:`, so you can do like, let's give `x` a default of `1`, that's again an arbitrary nix
+expression here, `f = { x ? 1, y, ... }: x + y;`, so default of `1`, and then we don't have to pass this, `x = 2`:
+
+```nix
+someFunAttrs' =
+  let
+    f = { x ? 1, y, ... }: x + y;
+  in
+    -- x = 2;
+    y = 3;
+    ignored = 4;
+  };
+```
+
+There is some arguments against, so these defaults don't work super well sometimes, there's other ways to do this better sometimes,
+let's go over this for now. So what you can also do is capture the entire attribute set that's passed here, kind of, let's say you
+had something like:
+
+```nix
+someFunAttrs'' = 
+  let
+    f = { x ? 1, y, ... }: x + y;
+    g = attrs: attrs.x + attrs.y
+...
+```
+
+Oh yeah, we can like make a whole combination here so these are almost equivalent:
+
+```nix
+someFunAttrs'' =
+  let
+    f = { x ? 1, y, ... }: x + y;
+    g = attrs: attrs.x or 1 + attrs.y
+```
+
+So the first one (`f`), explicitly destructures the attribute set, defaults `x` to `1`, `x ? 1`, then adds them, `x + y;`, and this here,
+`attrs.x` accesses `x` and uses the `or` opeartor to default it to `1` and also accesses `y`, `attrs.y`, so that's a good example.
+There is one slight difference where kind of destructuring of the attribute set here  20.00
