--- a/0/0.md
+++ b/0/0.md
@@ -398,4 +398,57 @@ someFunAttrs'' =
 
 So the first one (`f`), explicitly destructures the attribute set, defaults `x` to `1`, `x ? 1`, then adds them, `x + y;`, and this here,
 `attrs.x` accesses `x` and uses the `or` opeartor to default it to `1` and also accesses `y`, `attrs.y`, so that's a good example.
-There is one slight difference where kind of destructuring of the attribute set here  20.00
+There is one slight difference where kind of destructuring of the attribute set here happens before the function even starts
+evaluating, `f = { x ? 1, y, ... }:`, whereas here it doesn't happen before, `g = attrs:`, like this is just a variable, it 
+doesn't get evaluated if you don't, without this. But you can also somehow combine these a bit, and that's like, let's do like,
+by giving, using `attrs@`, actually that also works the other way around, this also works:
+
+```nix
+fg = attrs@{ x ? 1, y, ...}: x + y;
+gf = { x ? 1, y, ... }@attrs: x + y;
+```
+
+And then you can, both get this destructuring here and you can catch kind of the attrs itself, and so this way you can,
+you can do this for example `x + attrs.y`, or let's do `x + y + attrs.notIgnored;`, so that works.
+
+Let's go to like if expression as well quick, so very basic `if true then false else true;`:
+
+```nix
+ifExpr = if true then false else true;
+```
+
+Or:
+
+```nix
+ifExpr = if 1 + 1 == 2 then "Yes" else "No";
+```
+
+And you can provide different types here as well, `else 10;`.
+
+Matthew H.: Does the condition have to be a boolean, or is, could it be like, are the other values..
+
+Silvan: Yes, it has to be a boolean, anything else doesn't work. Yes and so, we can also kind of combine. Sorry let's make like a,
+let's say we have a function `functionMaybeArgument` where we do something like, so we declare a function, `let f = ` and we say
+the function takes like an x, `{ x, `, a y, `{ x, y }`, and attrs, `{ x, y }@attrs:`, and let's do like, `attrs@: x`, well
+that's also an ellipsis, `{ x, y, ...}@attrs:`, so we can get other arguments, so like `x + y +` and let's do like an
+`if attrs`, oh yeah, we haven't, okay we need to first talk about something else here:
+
+```nix
+# functionMaybeArgument =
+#  let f = { x, y, ... }@attrs: x + y + if attrs
+```
+
+So we can check for attributes, `checkForAttributes = `, we can do something like this, `let foo.bar.baz = 10;`, and then we can check
+whether it contains a certain attribute without having to access or evaluate it, `in foo ?`, that's with the question mark operator,
+so we can ask, `in foo ? bar`, does this contain `bar`? And this also works with full paths, `bar.baz`, so we can say does this contain
+`bar`, and does `bar` contain `baz`? And so in this case this would evaluate to true. This, `in foo ? bar.foo;` would evaluate to false,
+and so on:
+
+```nix
+checkForAttributes =
+  let foo.bar.baz = 10;
+  in foo ? bar.baz;
+```
+
+And so this way in here 23.32
+
