--- a/0/0.md
+++ b/0/0.md
@@ -450,5 +450,101 @@ checkForAttributes =
   in foo ? bar.baz;
 ```
 
-And so this way in here 23.32
+And so this way in here we can check whether `attrs ?` contains like `notIgnored`, or `maybeIgnored`, or actually `notIgnored`,
+so we check whether it contains a `notIgnored`, if it does contain that, `then`, let's go to new line here, ok formatting is a
+bit messy, if attrs contains one of these attributes then we can say, let's also add `attrs.notIgnored else 0;`, in
+`f { x = 1; y = 2; notIgnored = 3; };`, yeah so that works:
 
+```nix
+functionMaybeArgument =
+  let 
+    f = { x, y, ... }attrs@:
+      x + y + if attrs ? notIgnored then attrs.notIgnored else 0;
+  in f { x = 1; y = 2; notIgnored = 3; };
+```
+
+And I'm just realizing that that's actually the same as this, as `attrs.notIgnored or 0`:
+
+```nix
+functionMaybeArgument =
+  let 
+    f = { x, y, ... }@attrs:
+      x + y + if attrs ? notIgnored then attrs.notIgnored else 0;
+    f = { x, y, ... }@attrs:
+      x + y + attrs.notIgnored or 0;
+  in f { x = 1; y = 2; notIgnored = 3; };
+```
+
+I'm not sure about the precedence here actually (`.. + if ..`), let's try to evaluate this, maybe it will fail:
+
+```nix
+:!nix-instantiate --eval --strict
+error: syntax error, unexpected IF ..
+```
+
+Yep, that does fail, so we need a parenthesis here:
+
+```nix
+functionMaybeArgument =
+  let 
+    f = { x, y, ... }@attrs:
+      x + y + (if attrs ? notIgnored then attrs.notIgnored else 0);
+    f = { x, y, ... }@attrs:
+      x + y + attrs.notIgnored or 0;
+  in f { x = 1; y = 2; notIgnored = 3; };
+```
+
+```nix
+:!nix-instantiate --eval --strict
+error: attribute 'f' already defined..
+```
+
+Oh, and `f`'s already defined:
+
+```nix
+functionMaybeArgument =
+  let 
+    f = { x, y, ... }@attrs:
+      x + y + (if attrs ? notIgnored then attrs.notIgnored else 0);
+    f' = { x, y, ... }@attrs:
+      x + y + attrs.notIgnored or 0;
+  in f { x = 1; y = 2; notIgnored = 3; };
+```
+
+Okay, we have evaluation working again. Yes so that's mainly functions. Something to point out here, it's a bit of a quirk
+in nix is that `functionDefaultsQuirk = let f`, let's say you have a, well it goes a bit too deep maybe already, but let's
+say you have some defaulting argument here, `let f = { x ? 10 }`, and then you do like `@attrs:`, and then you try to check
+whether attrs contains x, `attrs ? x;`, now what's, `in`, it's kind of a interesting question what, or let's also do like,
+`in f {}`, so attrs here, `(@attrs:)`, doesn't do anything regarding like these defaults, `{ x ? 10 }`, attrs is literally
+just the thing you pass in, `f {}`, and so if you don't pass an x here, `{ x ? 10 }`, even though you can like use this 
+`x` variable here, `x attrs ?`, the check here will fail, it won't contain an `x`, let's evaluate this:
+
+```nix
+functionDefaultsQuirk = 
+  let f = { x ? 10 }@attrs: attrs ? x;
+  in f {};
+```
+
+```nix
+:!nix-instantiate --eval --strict
+..functionDefaultsQuirk = false;
+```
+
+Yeah, it's false, yeah and so that's a bit of a catch. 
+
+Yeah and, maybe we can look at some builtin functions. `builtinsFuns = `, so there is, we have functions like, so pretty much
+all of these are accessible under `builtins.`, that's kind of the builtins operator, also `builtins.toString;` is here, we have,
+oh lists, we haven't checked out lists, I'm just realizing, but yeah, lists are just the normal thing, but something to point out
+is that elements are separated by spaces so if we were to make a list of functions here, `a = [ builtins.toString builtins.map ];`
+you'd have to separate them by spaces and not add any commas so:
+
+```nix
+a = [
+  builtins.toString
+  builtins.map
+  builtins.partition
+];
+```
+
+There's a whole bunch of these. We can also look at these in nix repl, maybe that's actually a good point to mention, let's switch to the
+nix repl real quick, we also have auto completion here so that's nice. 27.46
